--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,28 +5,11 @@
     <string name="cancel">Cancel</string>
 
     <string-array name="nav_drawer_items">
-        <item>Jobs</item>
+        <item>Home</item>
         <item>Ongoing Job</item>
-        <item>Completed Jobs</item>
-        <item>Job Offers</item>
-        <item>Messages</item>
-        <item>T&amp;Cs</item>
-        <item>Privacy Policy</item>
-        <item>Availability</item>
-        <item>Profile</item>
-        <item>Logout</item>
     </string-array>
 
     <array name="nav_drawer_icons">
-        <item>@drawable/ic_arrow_left_black</item>
-        <item>@drawable/ic_arrow_left_black</item>
-        <item>@drawable/ic_arrow_left_black</item>
-        <item>@drawable/ic_arrow_left_black</item>
-        <item>@drawable/ic_arrow_left_black</item>
-        <item>@drawable/ic_arrow_left_black</item>
-        <item>@drawable/ic_arrow_left_black</item>
-        <item>@drawable/ic_arrow_left_black</item>
-        <item>@drawable/ic_arrow_left_black</item>
         <item>@drawable/ic_arrow_left_black</item>
     </array>
 
