This is Android App Arc with Dagger2, RxJava, Retrofit2 and MVP

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">NoowenzArc</string>
+    <string name="app_name">NoowenzArc1</string>
     <string name="logOut_msg">Are you sure you want to log out?</string>
     <string name="yes">Yes</string>
     <string name="cancel">Cancel</string>
